# rust_lda

./: Cargo.toml  README.md  rust_lda.spdx
examples/: example.rs
src/: lib.rs
