[package]
name = "rust_lda"
version = "0.0.1"
authors = ["Christopher Taylor"]
edition = "2018"
license-file = "LICENSE_1_0.txt"
keywords = ["datascience", "statistics", "topicmodeling", "topics", "modeling"]
categories = ["data-structures", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"regex" = "1.3.9"
"rand" = "0.7.3"
"ndarray" = "0.13.1"
"ndarray-rand" = "0.11.0"
"ndarray-stats" = "0.3.0"
